# agv_practice

./: Dockerfile  auto_start.sh  readme.md  start.sh  start_amcl.sh  start_control.sh  start_lidar.sh  start_nav.sh  start_rviz.sh  whitelist.xml
agv_description/: CMakeLists.txt  package.xml
agv_description/gazebo/: body.xacro  controller.xacro  lidar.xacro
agv_description/launch/: view_robot.launch.py
agv_description/meshes/: agv.dae  body.stl  chassis.stl  gaizi.stl
agv_description/ros2_control/: gazebo_controller.yaml  gazebo_system.xacro
agv_description/rviz/: view_robot.rviz
agv_description/urdf/: body.xacro  inertial.xacro  lidar.xacro  materials.xacro  robot.urdf.xacro
agv_hw/: CMakeLists.txt  agv_hw.xml  package.xml
agv_hw/config/: robomaster_6020.yaml
agv_hw/include/agv_hw/: robomaster_6020.hpp  socketcan.hpp  tiger_motor.hpp
agv_hw/launch/: control.launch.py  test.launch.py
agv_hw/ros2_control/: agv_controller.yaml
agv_hw/rviz/: test.rviz
agv_hw/src/: robomaster_6020.cpp  tiger_motor.cpp
agv_hw/urdf/: robot.urdf.xacro  ros2_control.xacro
agv_lidar/: package.xml  setup.cfg  setup.py
agv_lidar/agv_lidar/: __init__.py  agv_lidar.py  json_transformer.py
agv_lidar/launch/: lidar.launch.py
agv_lidar_cpp/: CMakeLists.txt  package.xml
agv_lidar_cpp/include/agv_lidar_cpp/: lidar.hpp
agv_lidar_cpp/src/: lidar.cpp  lidar_node.cpp
agv_nav/: CMakeLists.txt  package.xml
agv_nav/config/: nav.rviz  nav2_params.yaml  twist_mux.yaml
agv_nav/launch/: nav.launch.py  start_all.launch.py
agv_nav/map/: lab102-2.pgm  lab102-2.yaml  lab2.yaml
agv_sim/: CMakeLists.txt  package.xml
agv_sim/launch/: sim.launch.py
agv_sim/rviz/: sim.rviz
agv_sim/worlds/: new.world  wall.world
agv_simulation/: CMakeLists.txt  package.xml
agv_simulation/launch/: simulation.launch.py
agv_simulation/worlds/: wall.world
agv_slam/: CMakeLists.txt  package.xml
teleop_twist_joy/: CHANGELOG.rst  CMakeLists.txt  package.xml
teleop_twist_joy/include/teleop_twist_joy/: teleop_twist_joy.hpp
teleop_twist_joy/src/: teleop_node.cpp  teleop_twist_joy.cpp
